Virtualthread updated